[package]
name = "MicrometerLogger"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serialport = "4.7.2"
chrono = "0.4.38"
plotters = "0.3.6"
plotters-iced = "0.11"
iced = { version = "0.13.1", features = ["canvas", "tokio", "advanced"] }
rfd = "0.14.0"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
